<resources>
    <string name="app_name">萌呷</string>
    <string name="enetic_animation">动画</string>
    <string name="enetic_wallpaper">精品</string>

    <string name="enetic_cartoon">漫画</string>
    <string name="enetic_recom">广场</string>
    <string name="enetic_home">首页</string>
    <string name="enetic_type">分类</string>
    <string name="enetic_us">我的</string>
    <string name="crash_program_restart">稍等，需要重新启动程序哦~</string>
    <string name="submint">提交</string>
    <string name="more">更多</string>


    <string name="order_recoder">订购记录</string>
    <string name="my_message">我的消息</string>

    <string name="my_dowm">离线缓存</string>
    <string name="wathc_recoder">观看记录</string>
    <string name="collect">我的收藏</string>
    <string name="set_text">设置</string>
    <string name="my_jifen">我的积分</string>

    <string name="user_sure">确定</string>
    <string name="user_fail">取消</string>

    <string name="lose_possword">忘记密码？</string>
    <string name="user_possword">密码</string>
    <string name="user_phone">手机号</string>
    <string name="bind_phone">绑定手机号</string>
    <string name="bind_pho">绑定手机</string>
    <string name="user_input_phone">输入手机号</string>
    <string name="login_type">使用其他方式登录</string>
    <string name="get_code">获取验证码</string>
    <string name="code">验证码</string>
    <!--新界面-->
    <string name="qianming">这个人很懒,什么都没有留下╮(╯▽╰)╭</string>
    <string name="degreee">等 级</string>
    <string name="money_package">钱 包</string>
    <string name="vip_people">会 员</string>
    <string name="center_people">个人资料</string>
    <string name="message">消息</string>
    <string name="login">登录</string>
    <string name="resiner">注册</string>
    <string name="forget_pass">忘记密码</string>
    <string name="login_hint">输入用户名/手机号/邮箱</string>
    <string name="bind_hint">输入手机号码</string>
    <string name="password_hint">请输入密码</string>
    <string name="forget_password"><u>忘记密码 ?</u></string>
    <string name="other_login_way">其他登录方式</string>
    <string name="input_phone">输入手机号码</string>
    <string name="password">输入密码</string>
    <string name="new_password">请输入新密码</string>
    <string name="input_yzm">输入验证码</string>
    <string name="finsh">完成</string>
    <string name="degree">等级</string>
    <string name="click_login">点击登录●ω●╭</string>
    <string name="click_login_moreinfo">登录后才可以进行更多操作哦</string>
    <string name="vip_false_hint">您还不是会员用户</string>
    <string name="no_login_hint">亲,您还没有登录哦~</string>
    <string name="vip_tequan">会员特权</string>
    <!--vip_mine-->
    <string name="free_look">免费看</string>
    <string name="free_look_info">漫画动画免费看VIP章节</string>
    <string name="follow_heart">随心装扮</string>
    <string name="follow_heart_info">每日获得普通用户的1.5倍</string>
    <string name="follow_heart_info_vvip">每日获得普通用户的2倍</string>
    <string name="growth_accelerate">成长加速</string>
    <string name="growth_accelerate_info">每日获得普通用户的1.2倍</string>
    <string name="growth_accelerate_info_vvip">每日获得普通用户的1.5倍</string>
    <string name="get_score">领积分</string>
    <string name="get_score_info">每日获得额外多的00+的积分</string>
    <string name="special_show">特殊展示</string>
    <string name="special_show_info">自带更炫酷的头像挂饰背景</string>
    <string name="open_vip_hint">立即开通即享会员福利</string>
    <string name="vip_speed_hint">开通VIP可享会员加速</string>
    <string name="open_vip_now">立即开通</string>
    <string name="open_vip_member">开通会员</string>
    <string name="open_vip_new_hint">开通VIP会员</string>
    <string name="open_vip_message_hint">萌呷会以短信形式将您的申请发送到您的手机中回复信息即刻开通</string>
    <!--persioninfo-->
    <string name="persion_info">个人资料</string>
    <string name="mine_xunzhang">我的勋章</string>
    <string name="more_view">显示更多</string>
    <string name="join_look">进去看看</string>
    <string name="edit">编辑资料</string>
    <string name="mine_comments">我的收藏</string>
    <string name="mine_wallet">钱包</string>
    <string name="mine_header_img">我的头像</string>
    <string name="save">保存</string>
    <string name="exit_login">退出登录</string>
    <string name="service">客服</string>
    <!--个人中心-->
    <string name="safety_user">账户安全中心</string>
    <string name="protect_user">空间隐私设置</string>
    <string name="sign_user">个性签名</string>
    <string name="birthday_user">出生日期</string>
    <string name="sex_user">性别</string>
    <string name="nickname_user">昵称</string>
    <string name="mine_level">我的等级</string>
    <string name="mine_task">任务</string>
    <string name="mine_qiandao">签到</string>

    <string name="mine_medal">勋章</string>
    <string name="add_attention">关注+</string>
    <string name="mine_achieve">成就</string>
    <string name="task_achieve">任务</string>
    <string name="attendance_achieve">签到成就</string>
    <string name="comment_achieve">评论成就</string>
    <string name="register_achieve">注册成就</string>
    <string name="activity_achieve">活动</string>

    <string name="level_state">等级说明</string>
    <string name="level_nickname">魔人》》</string>
    <string name="level_experienece">今日经验</string>
    <string name="level_total_experienece">累计经验</string>
    <string name="level_up_method">升级攻略</string>
    <!--task-->
    <string name="new_user_task">新手任务</string>
    <string name="task_days">日常任务</string>
    <string name="days_add">经验值+4</string>
    <string name="qiandao_get">签到可获取4经验!</string>
    <string name="qiandao">签到</string>
    <string name="slow">慢</string>
    <string name="open_vip">开通VIP</string>
    <string name="mine_quanzi">我的圈子</string>
    <string name="day_of_end">距离会员到期,剩余</string>
    <string name="only_guajian">专属挂件</string>
    <string name="no_vip_user">非VIP用户</string>
    <string name="way_if_next">      距离 %2$d, 还有 %2$d 经验值</string>
    <string name="buy_now">立即购买</string>
    <string name="guajian_hint">会员可定制稀有头部挂件</string>

    <string name="look_shipin_ofmine">查看我的饰品</string>
</resources>