<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_bind_pho"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_efefef"
    android:orientation="vertical">

    <com.wodm.android.view.newview.AtyTopLayout
        android:id="@+id/back_bind"
        android:layout_width="match_parent"
        android:layout_height="@dimen/px_90"
        app:BackGroundColor="@color/color_f5c92f"
        app:CustomtitleTextColor="@android:color/black"
        app:CustomtitleTextSize="@dimen/text_size_48_px"
        app:Customtoptitle="@string/bind_pho"
        app:leftBackGround="@mipmap/back"
        app:rightType="0" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/px_45"
        android:layout_marginRight="@dimen/px_45"
        android:layout_marginTop="@dimen/px_21"
        android:orientation="vertical">

        <EditText
            android:id="@+id/phone_bind"
            android:layout_width="match_parent"
            android:layout_height="@dimen/px_86"
            android:background="@drawable/bind_phone"
            android:hint="@string/bind_hint"
            android:paddingLeft="@dimen/px_45"
            android:textColorHint="@color/color_999999"
            android:textSize="@dimen/text_size_22_px" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/px_86"
            android:layout_marginTop="@dimen/px_21"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/yzm_bind"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:background="@drawable/bind_phone"
                android:hint="@string/input_yzm"
                android:paddingLeft="@dimen/px_45"
                android:textColorHint="@color/color_999999"
                android:textSize="@dimen/text_size_22_px" />

            <Button
                android:id="@+id/get_yzm_bind"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/px_21"
                android:background="@drawable/bind_submit"
                android:text="@string/get_code"
                android:textColor="@color/color_ffffff"
                android:textSize="@dimen/text_size_22_px" />
        </LinearLayout>

        <Button
            android:id="@+id/submit_bind"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/px_86"
            android:layout_marginTop="@dimen/px_21"
            android:background="@drawable/bind_submit"
            android:text="@string/submint"
            android:textColor="@color/color_ffffff"
            android:textSize="@dimen/text_size_30_px" />
    </LinearLayout>


</LinearLayout>
